schema/testdata/errors/attribute_embed.keel
model Author {
    fields {
        firstName Text
        surname Text @unique
        books Book[]
    }
}

model Review {
    fields {
        content Text
        book Book
    }

    actions {
        get getReview(id) {
            @embed(book)
        }
    }
}

model Book {
    fields {
        //expect-error:20:26:E011:field 'title' has an unrecognised attribute @embed
        title Text 
        author Author
        reviews Review[]
        code Code?
    }

   
    actions {
        list listBooks() 
        get getBook(id) {

            @embed()

        }
        get getLiteBook(id)
    }
}

model Code {
    fields {
        code Text
        book Book @unique
    }
}
